# rust-web-app

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-30db2eb2cfd84ac0215127a683fb5ad1cfd109f5357e87fb0a08f95c344698bb.json
configuration/: production.yaml
migrations/: 20230907105838_create_subscriptions_table.sql  20230928130229_add_status_to_subscriptions.sql  20230928131233_make_status_not_null_in_subscriptions.sql  20230928132302_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
