[package]
name = "web_prod"
version = "0.1.0"
edition = "2021"


# ライブラリは再利用可能なコードをまとめたもの
[lib]
path = "src/lib.rs"


# バイナリはlib.rsを参照しつつ実行可能なファイルを作る
# main.rsに含まれる関数は他のモジュールから呼び出せないのでテストができない。
# そのため、lib.rsに関数を書いて、main.rsから呼び出すようにする。
[[bin]]
path = "src/main.rs"
name = "web_prod"


[dependencies]
actix-web = "4"
# serdeはシリアライズ/デシリアライズを行うライブラリ。derievは構造体の前にマクロをつけられるようにする
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
chrono = "0.4.30"
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4.20"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.6"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18.0"
